RESOLVED FIXED 247304
Regression(254490@main): null dereference in Permissions::query
https://bugs.webkit.org/show_bug.cgi?id=247304
Summary Regression(254490@main): null dereference in Permissions::query
Sihui Liu
Reported 2022-10-31 21:46:27 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-31 21:50:20 PDT
Sihui Liu
Comment 2 2022-10-31 22:01:33 PDT
EWS
Comment 3 2022-11-01 18:03:34 PDT
Committed 256209@main (7dc6d6b06a8c): <https://commits.webkit.org/256209@main> Reviewed commits have been landed. Closing PR #5991 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.