Cherry-pick 7dc6d6b06a8c. rdar://problem/101789656

Regression(254490@main): null dereference in Permissions::query
    https://bugs.webkit.org/show_bug.cgi?id=247304
    rdar://101789656

    Reviewed by Wenson Hsieh and Alex Christensen.

    When creating PermissionStatus in Permissions::query(), we did not null check document->page() before dereferencing it.

    * Source/WebCore/Modules/permissions/Permissions.cpp:
    (WebCore::Permissions::query):

    Canonical link: https://commits.webkit.org/256209@main

Canonical link: https://commits.webkit.org/256138.42@safari-7615.1.12-branch